tests/error/misc_errors/return_not_annotated_spaced_colon.py
from tests.util import compile_guppy


@compile_guppy
# fmt: off
def foo() :
    return
# fmt: on
