tests/error/misc_errors/return_not_annotated_spaced_colon.err
Error: Missing type annotation (at $FILE:6:0)
  | 
4 | @compile_guppy
5 | # fmt: off
6 | def foo() :
  | ^^^^^^^^^^^ Return type must be annotated

Help: Looks like `foo` doesn't return anything. Consider annotating it with `->
None`.

Guppy compilation failed due to 1 previous error
